fix stream container warning

--- a/twinspin/lib/twinspin_web/live/reconciliation_live/index.html.heex
+++ b/twinspin/lib/twinspin_web/live/reconciliation_live/index.html.heex
@@ -138,7 +138,7 @@
           </button>
         </div>
       <% else %>
-        <div class="space-y-4">
+        <div id="jobs" phx-update="stream" class="space-y-4">
           <div
             :for={{id, job} <- @streams.jobs}
             id={id}
