--- a/twinspin/lib/twinspin_web/components/layouts/root.html.heex
+++ b/twinspin/lib/twinspin_web/components/layouts/root.html.heex
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
-    <.live_title default="TwinSpin" suffix=" · Database Reconciliation">
+    <.live_title default={Twinspin.Settings.get_brand_name()} suffix=" · Database Reconciliation">
       {assigns[:page_title]}
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/css/app.css"} />
