--- a/twinspin/lib/twinspin_web/live/database_connection_live/index.html.heex
+++ b/twinspin/lib/twinspin_web/live/database_connection_live/index.html.heex
@@ -114,7 +114,7 @@
           </button>
         </div>
       <% else %>
-        <div class="space-y-4">
+        <div id="connections" phx-update="stream" class="space-y-4">
           <div
             :for={{id, connection} <- @streams.connections}
             id={id}
